samples/_failures_safe/1761594158_efe3ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff9a57fe.c: In function ‘main’:
./samples/SAFE/__tmp_ff9a57fe.c:157:5: error: expected declaration or statement at end of input
  157 |     return 0;
      |     ^~~~~~
